Changelog
=========

6.8.dev0 - (unreleased)
-----------------------
* Improve: Disable sorting and searching for column Document access in files
  library view and admin panel.
* Improve: Add link and more info on search items in files library view.
  [GhitaB #96683]
* Improve: 'Registration declined' instead of rejected in meeting view.
* Improve: rename column Time of application in Subscribers view table.
* Improve: space in meeting register, after Hello.
* Improve: replace 'event organisers' with 'the event organiser'.
* Improve: replace 'register to' with 'register for'.
  [GhitaB #97529]

6.7 - (2019-02-05)
------------------
* Improve: change info text based on context in meeting registration form.
  Improve: hide Role in case of webinar in meeting registration form and
  subscribers table.
  [GhitaB #97529]
* Feature: invisible columns, editable by admin but unpublished for users.
  [GhitaB #99878]
* Improve: rename column Document access in admin panel.
  Improve: use Link text for files, too, in admin panel.
  Improve: move filters before table.
  Improve: the same changes for view mode.
  [GhitaB #99878]
* Feature: script for contacting users by email to update email
  notifications preferences - profiles of old accounts.
  Manual step: In: /manage_propertiesForm set
  users_email_notifications_enabled Boolean checked
  users_email_notifications_secret_key String value_here
  users_email_notifications_secret_users_unit Int value_here
  [GhitaB #101742]

6.6 - (2019-01-30)
------------------
* Improve: In meeting register, improve disclaimers fields styles.
  [GhitaB #101958]
* Feature: WIP script for contacting users by email to update email
  notifications preferences - profiles of old accounts.
  [GhitaB #101742]

6.5 - (2019-01-29)
------------------
* Improve: script for deleting subscribers data to delete accounts if marked.
  Improve: Subscribers view - update text for account deletion.
  [GhitaB #102026]